--- a/client/src/styles/editor.scss
+++ b/client/src/styles/editor.scss
@@ -70,3 +70,12 @@
     margin-bottom: 1.5rem !important;
   }
 }
+
+.flex-container {
+  display: flex;
+}
+
+.flex-child {
+  flex: 1;
+  border: 1px solid rgb(10, 4, 65);
+}  
